--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "amfe-flexible": "^2.2.1",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
+    "dayjs": "^1.10.7",
     "qrcodejs2": "^0.0.2",
     "vant": "^2.12.32",
     "vue": "^2.6.11",
